--- a/style.css
+++ b/style.css
@@ -155,3 +155,13 @@ footer {
   text-align: center;
   font-size: 14px;
 }
+
+/* Media Queries */
+@media (max-width: 700px) {
+  :root{
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
